--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div id="questions" class="hide">
-        <h2 id="question-title"></h2>
+        <h2 id="quest-title"></h2>
         <div id="choices" class="choices"></div>
       </div>
 
