--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
         <h2>Thats It!</h2>
         <p>here's Your Final Score! <span id="final-score"></span>.</p>
         <p>
-          Enter initials: <input type="text" id="initials" max="3" />
+          Enter initials: <input type="text" id="initials" />
           <button id="submit">Submit</button>
         </p>
       </div>
-
-      <div id="feedback" class="feedback hide"></div>
     </div>
 
     <script src="assets\script.js"></script>
